--- a/projects/QuenChing-Mod-Client/tsconfig.json
+++ b/projects/QuenChing-Mod-Client/tsconfig.json
@@ -35,7 +35,7 @@
 			"#renderer/*" : ["./src/Renderer/*"],
 			"#src/*" : ["./src/*"],
 			"#root-projects/*" : ["../../../../projects/*"],
-			"#generic/*" : ["../../../../generic-services/*"],
+			"#generic/*" : ["../../generic-services/*"],
 			"#project/*" : ["./*"]
 		}
 	},
